src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__string__cast_string_to_time__impl.snap
---
source: src/expr/src/scalar/func/impls/string.rs
expression: info
---
Info {
    output_type_nullable: SqlColumnType {
        scalar_type: Time,
        nullable: true,
    },
    output_type_nonnullable: SqlColumnType {
        scalar_type: Time,
        nullable: false,
    },
    preserves_uniqueness: false,
    inverse: Some(
        CastTimeToString(
            CastTimeToString,
        ),
    ),
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: true,
}
